--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "@kuali/simple-tree": "^1.0.3",
+    "axios": "^0.15.2",
     "express": "^4.14.0",
+    "express-session": "^1.14.2",
+    "material-ui": "^0.16.1",
     "nodemon": "^1.11.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
