--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "react-scripts": "0.7.0"
   },
   "dependencies": {
-    "@kuali/simple-tree": "^1.0.3",
+    "@kuali/simple-tree": "^1.1.0",
     "axios": "^0.15.2",
     "express": "^4.14.0",
     "express-session": "^1.14.2",
@@ -17,6 +17,7 @@
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-router": "^3.0.0",
+    "react-tap-event-plugin": "^1.0.0",
     "request": "^2.78.0",
     "request-promise": "^4.1.1"
   },
