--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@kuali/simple-tree": "^1.1.0",
     "axios": "^0.15.2",
+    "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "express-session": "^1.14.2",
     "material-ui": "^0.16.1",
